--- a/1. Essential HTML Tags/index.html
+++ b/1. Essential HTML Tags/index.html
@@ -5,24 +5,41 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- TODO 1.1: Add a title to your website -->
-    
+    <!-- DONE 1.1: Add a title to your website -->
+    <title>My Webpage</title>
 </head>
 
 <body>
-    <!-- TODO 1.2: Add 6 headers from the largest to the smallest -->
+    <!-- DONE 1.2: Add 6 headers from the largest to the smallest -->
+    <h1>Hit her 1</h1>
+    <h2>Hit her 2</h2>
+    <h3>Hit her 3</h3>
+    <h4>Hit her 4</h4>
+    <h5>Hit her 5</h5>
+    <h6>Hit her 6</h6>
 
-    <!-- TODO 1.3: Add a paragraph. Try making the text italic or bold. -->
-
-    <!-- TODO 1.4: Add a link to your github account -->
-
-    <!-- TODO 1.5: Add an unordered list with 2 items -->
-
-    <!-- TODO 1.6: Add an ordered list with 3 items -->
-
-    <!-- TODO 1.7: Add an image  -->
-
-    <!-- TODO 1.8: Group a header and a paragraph in one tag -->
+    <!-- DONE 1.3: Add a paragraph. Try making the text italic or bold. -->
+    <p>Hola, This <b>bold</b>, this <i>,italic</i>.</p>
+    <!-- DONE 1.4: Add a link to your github account -->
+    <a href="https://github.com/Sussysoba">Linkerino to githuberino</a>
+    <!-- DONE 1.5: Add an unordered list with 2 items -->
+    <ul>
+        <li>Order on list? No? Item 1</li>
+        <li>Order on list? No? Item 2</li>
+    </ul>
+    <!-- DONE 1.6: Add an ordered list with 3 items -->
+    <ol>
+        <li>Order on list? Yes? Item 1</li>
+        <li>Order on list? Yes? Item 2</li>
+        <li>Order on list? Yes? Item 3</li>
+    </ol>
+    <!-- DONE 1.7: Add an image  -->
+    <img src="https://cdn.discordapp.com/attachments/1187923295606157433/1187923328564990032/Agila.jpg" alt="Senior Agila" height="250" />
+    <!-- DONE 1.8: Group a header and a paragraph in one tag -->
+    <div>
+        <h1>Hit her inside a div</h1>
+        <p>Paragraph inside a div</p>
+    </div>
 </body>
 
 </html>
