--- a/2. Exploring HTML Form Elements/index.html
+++ b/2. Exploring HTML Form Elements/index.html
@@ -6,27 +6,59 @@
 </head>
 
 <body>
-    <h1>HTML Form Example</h1>
-    <!-- TODO 2.1: Add the container for the form. It should POST to "/submit_form"  -->
-    
-        <!-- TODO 2.2: Add a first name text field -->
+    <h1>MCHELL</h1>
+    <!-- DONE 2.1: Add the container for the form. It should POST to "/submit_form" -->
+    <form action="/submit_form" method="post">
 
-        <!-- TODO 2.3: Add a last name text field. The field must be required. -->
+        <!-- DONE 2.2: Add a first name text field -->
+        <label for="firstName">Ur firstname:</label><br>
+        <input type="text" id="firstName" name="firstName"><br>
 
-        <!-- TODO 2.4: Add an email text field. The field must be read only. -->
+        <!-- DONE 2.3: Add a last name text field. The field must be required. -->
+        <label for="lastName">Ur lastname:</label><br>
+        <input type="text" id="lastName" name="lastName" required><br>
 
-        <!-- TODO 2.5: Add an address text field. The field must be disabled. -->
+        <!-- DONE 2.4: Add an email text field. The field must be read only. -->
+        <label for="email">Email:</label><br>
+        <input type="email" id="email" name="email" readonly><br>
 
-        <!-- TODO 2.6: Add a year level dropdown. The inital selected value must be "Select an option", but it must not be a valid selection. -->
+        <!-- DONE 2.5: Add an address text field. The field must be disabled. -->
+        <label for="address">Address:</label><br>
+        <input type="text" id="address" name="address" disabled><br>
 
-        <!-- TODO 2.7: Add radio buttons that ask which learning mode the user prefers -->
+        <!-- DONE 2.6: Add a year level dropdown. The inital selected value must be "Select an option", but it must not be a valid selection. -->
+        <label for="yearLevel">Year Level:</label><br>
+        <select id="yearLevel" name="yearLevel">
+            <option value="" selected disabled>Select an option</option>
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+        </select>
 
-        <!-- TODO 2.8: Add check boxes that ask which subjects the user has taken -->
-       
-        <!-- TODO 2.9: Add a text area that asks the user if they would prefer to be a cactus or a shark -->
+        <!-- DONE 2.7: Add radio buttons that ask which learning mode the user prefers -->
+        <p>Learning Mode:</p>
+        <input type="radio" id="learningMode1" name="learningMode" value="Online">
+        <label for="learningMode1">Online</label><br>
+        <input type="radio" id="learningMode2" name="learningMode" value="Offline">
+        <label for="learningMode2">Offline</label><br>
 
-        <!-- TODO 2.10: Add a submit button -->
+        <!-- DONE 2.8: Add check boxes that ask which subjects the user has taken -->
+        <p>What subjects have u taken?:</p>
+        <input type="checkbox" id="subject1" name="subject1" value="Mathematics">
+        <label for="subject1">Data structure💀</label><br>
+        <input type="checkbox" id="subject2" name="subject2" value="English">
+        <label for="subject2">Environmental Science💩</label><br>
+        <input type="checkbox" id="subject3" name="subject3" value="Science">
+        <label for="subject3">Entrepreneurship💅</label><br>
 
+        <!-- DONE 2.9: Add a text area that asks the user if they would prefer to be a cactus or a shark -->
+        <label for="preference">Cactus or a shark? y?</label>
+        <textarea id="preference" name="preference"></textarea>
+
+        <!-- DONE 2.10: Add a submit button -->
+        <input type="submit" value="Sned">
+
+    </form>
 </body>
 
 </html>
