Committed and pushed

--- a/3. Styling with CSS/index.html
+++ b/3. Styling with CSS/index.html
@@ -6,14 +6,10 @@
 </head>
 
 <body>
-    <h1 class="center-text">Hello, World!</h1>
-    <p class="center-text">This is a paragraph.</p>
-    <p class="paragraph-style">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam cumque tenetur accusamus
-        expedita quod voluptatibus amet non velit. Nobis optio, aliquam dolore expedita molestiae maxime asperiores
-        iusto rem non velit.
-    </p>
-    <div class="box">This is a div element styled with CSS.</div>
+    <h1 class="center-text">Hola, Mundo!</h1>
+    <p class="center-text">Thy paragraph.</p>
+    <p class="paragraph-style">A lot of latin words</p>
+    <div class="box">Thy div on CSS.</div>
 </body>
 
 </html>
