--- a/4. CSS Selectors/index.html
+++ b/4. CSS Selectors/index.html
@@ -6,11 +6,11 @@
 </head>
 
 <body>
-    <h1 class="title">Hello, World!</h1>
-    <p class="text">This is a paragraph.</p>
-    <div id="unique">This is a unique div element styled with CSS.</div>
-    <div class="common">This is a common div element styled with CSS.</div>
-    <div class="common">This is another common div element styled with CSS.</div>
+    <h1 class="title">Hola, Mundo!</h1>
+    <p class="text">Thy paragraph.</p>
+    <div id="unique">Thy unique div element styled with CSS.</div>
+    <div class="common">Thy common div element styled with CSS.</div>
+    <div class="common">Thy another common div element styled with CSS.</div>
     <a href="https://www.google.com" target="_blank">Visit Google</a>
 </body>
 
